<resources>
    <string name="app_name" translatable="false">McLaut</string>
    <!--Login activity labels-->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in_button_text">Log In</string>
    <string name="city">City:</string>
    <string name="error_login">Login or password is incorrect</string>
    <string name="error_no_internet">Connection error</string>
    <string name="error_empty_field">Empty field</string>

    <!--Drawer Toggle strings-->
    <string name="drawer_toggle_open" translatable="false">open_drawer</string>
    <string name="drawer_toggle_close" translatable="false">close_drawer</string>

    <string name="btn_tag_key_id" translatable="false">user_id</string>
    <string name="btn_tag_key_item_index" translatable="false">item_index</string>

    <!--Drawer items names-->
    <string name="general_information">General information</string>
    <string name="cash_operations">Cash operations</string>
    <string name="settings">Settings</string>
    <string name="payment">Payment</string>
    <string name="add_new_user">Add Account</string>
    <string name="personal_account">p/a: </string>

    <!--Dialog items info-->
    <string name="dialog_text">Are you sure ?</string>
    <string name="dialog_button_cancel">CANCEL</string>
    <string name="dialog_button_delete">DELETE</string>

    <!--Payment strings-->
    <string name="payment_next">Next</string>
    <string name="payment_cvv" translatable="false">CVV</string>
    <string name="payment_yy" translatable="false">YY</string>
    <string name="payment_mm" translatable="false">MM</string>
    <string name="payment_card_number">Card number</string>
    <string name="payment_save_card">Save card</string>
    <string name="error_minimum_refung">The minimum amount refill 5 UAH.</string>
    <string name="error_card_number">Invalid card format.</string>


    <!--User info fragment labels-->
    <string name="label_user_information">User information</string>
    <string name="label_connections">Connections</string>
    <string name="active_label">Active</string>
    <string name="no_active_label">No active</string>
    <string name="tariff_label">Tariff: </string>
    <string name="pay_at_day_label">Pay at day: </string>
    <string name="account_number_label">Account number: </string>
    <string name="its_left_label">Its left</string>
    <string name="days_of_service_label">days of service provision</string>
    <string name="uah_symbol" translatable="false">₴</string>

    <!--User transactions info fragment-->
    <string name="label_tab_withdrawals">Withdrawals</string>
    <string name="label_tab_payments">Payments</string>
    <string name="label_tab_all">All</string>
    <string name="label_text_after_transaction">Balance after transaction: %1$.2f₴</string>


    <string name="enable_user_list" translatable="false">_user_list</string>
    <string name="enable_info" translatable="false">_user_info</string>
    <string name="remove_user" translatable="false">_remove_user</string>

    <string name="label_transaction_type_payment">Payment</string>
    <string name="label_transaction_type_withdraw">Withdraw</string>
    <string name="label_pay_type_other">Other</string>
    <string name="label_pay_type_pay_at_day">Pay per day</string>
    <string name="label_pay_type_terminal">Terminal</string>

    <string name="payment_baseUrl" translatable="false">https://user.tachcard.com/uk/pay-mclaut</string>
    <string name="payment_replenishment_amount">Replenishment amount</string>
    <string name="payment_network_error">Network error.</string>
    <string name="payment_amount_due_empty">Amount due:__.__₴</string>
    <string name="payment_amount_due">Amount due: </string>
    <string name="payment_select_card">Select card</string>
    <string name="payment_goto_card_settings">MANAGE CARDS</string>
    <string name="payment_slash">/</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_autoupdate">Частота автооновлення</string>
    <string name="settings_mobilenetwork">Мобільний інтернет</string>
    <string name="settings_mobilenetwork_summary">Дозволити фонове оновлення за допомогою мобільного інтернету.</string>
    <string name="settings_network">Network settings</string>
    <string name="settings_low_balance_alarm">Сповіщувати про низький рахунок</string>
    <string name="settings_delete_cards">Delete card</string>
    <string name="settings_delete_cards_summary">Select cards what you wanna to delete</string>
    <string name="settings_about">About</string>
    <string name="settings_version">Version</string>
</resources>
