<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/login_screen_sideways_margin"
    android:layout_marginVertical="@dimen/login_screen_image_top_margin"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_tachcard_pay_card_number_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/payment_card_number">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_tachcard_pay_card_number_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="16" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.VisibilityAwareImageButton
            android:id="@+id/fragment_tachcard_pay_select_card_image_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/credit_card" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_tachcard_pay_mm_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="start"
            android:hint="@string/payment_mm">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_tachcard_pay_mm_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textSize="42sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_tachcard_pay_yy_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/payment_yy">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_tachcard_pay_yy_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_tachcard_pay_cvv_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="124dp"
            android:layout_weight="2"
            android:hint="@string/payment_cvv"
            app:passwordToggleContentDescription=""
            app:passwordToggleDrawable="@drawable/help_circle_outline"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_tachcard_pay_cvv_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:maxLength="3">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/tachcard_pay_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccent"
        android:text="@string/payment_next"
        android:textColor="@android:color/white"
        app:spinning_bar_color="@android:color/white"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />

</LinearLayout>